NEWS: documented the license changes

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,24 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  The license of the following macros has been updated from GPLv2 (with
+  Autoconf exception) to GPLv3 (with Autoconf exception):
+  AX_ARG_WITH_PATH_STYLE, AX_C_BIGENDIAN_CROSS, AX_C_DECLARE_BLOCK,
+  AX_CFLAGS_AIX_OPTION, AX_CFLAGS_FORCE_C89, AX_CFLAGS_GCC_OPTION,
+  AX_CFLAGS_HPUX_OPTION, AX_CFLAGS_IRIX_OPTION, AX_CFLAGS_NO_WRITABLE_STRINGS,
+  AX_CFLAGS_STRICT_PROTOTYPES, AX_CFLAGS_SUN_OPTION, AX_CFLAGS_WARN_ALL_ANSI,
+  AX_CHECK_ALIGNED_ACCESS_REQUIRED, AX_CHECK_DEFINE, AX_CHECK_FUNC_IN,
+  AX_CHECK_SYMBOL, AX_CHECK_TYPEDEF, AX_COND_WITH_LEVEL, AX_CONFIGURE_ARGS,
+  AX_CREATE_GENERIC_CONFIG, AX_CREATE_STDINT_H, AX_CREATE_TARGET_H,
+  AX_DEFINE_SUB_PATH, AX_DIRNAME, AX_EXPAND_PREFIX, AX_GCC_CONST_CALL,
+  AX_GCC_MALLOC_CALL, AX_GCC_WARN_UNUSED_RESULT,
+  AX_MAINTAINER_MODE_AUTO_SILENT, AX_NOT_ENABLE_FRAME_POINTER,
+  AX_NUMERIC_NAMEDLEVEL, AX_PATCH_LIBTOOL_CHANGING_CMDS_IFS, AX_PATH_LIB_PCRE,
+  AX_PROG_CC_CHAR_SUBSCRIPTS, AX_PROG_CP_S, AX_SET_DEFAULT_PATHS_SYSTEM,
+  AX_SPEC_FILE, AX_SPEC_PACKAGE_VERSION, AX_SUBDIR_FILES, AX_SUBST_WITH,
+  AX_SYS_LARGEFILE_SENSITIVE, AX_WARNING_DEFAULT_ACLOCALDIR, and
+  AX_WARNING_DEFAULT_PKGCONFIG.
+
   The macros AX_CXX_CPPFLAGS_STD_LANG, AX_CXX_CXXFLAGS_STD_LANG and
   AX_CXX_LDFLAGS_STD_LANG have been modified to use AX_COMPILER_VENDOR
   for compiler detection.
