Note macros' license upgraded.

--- a/NEWS
+++ b/NEWS
@@ -19,14 +19,14 @@
   AX_CHECK_ALIGNED_ACCESS_REQUIRED, AX_CHECK_DEFINE, AX_CHECK_FUNC_IN,
   AX_CHECK_SYMBOL, AX_CHECK_TYPEDEF, AX_COND_WITH_LEVEL, AX_CONFIGURE_ARGS,
   AX_CREATE_GENERIC_CONFIG, AX_CREATE_STDINT_H, AX_CREATE_TARGET_H,
-  AX_DEFINE_SUB_PATH, AX_DIRNAME, AX_EXPAND_PREFIX, AX_GCC_CONST_CALL,
-  AX_GCC_MALLOC_CALL, AX_GCC_WARN_UNUSED_RESULT,
+  AX_DEFINE_SUB_PATH, AX_DIRNAME, AX_ENABLE_BUILDDIR, AX_EXPAND_PREFIX,
+  AX_GCC_CONST_CALL, AX_GCC_MALLOC_CALL, AX_GCC_WARN_UNUSED_RESULT,
   AX_MAINTAINER_MODE_AUTO_SILENT, AX_NOT_ENABLE_FRAME_POINTER,
   AX_NUMERIC_NAMEDLEVEL, AX_PATCH_LIBTOOL_CHANGING_CMDS_IFS, AX_PATH_LIB_PCRE,
-  AX_PROG_CC_CHAR_SUBSCRIPTS, AX_PROG_CP_S, AX_SET_DEFAULT_PATHS_SYSTEM,
-  AX_SPEC_FILE, AX_SPEC_PACKAGE_VERSION, AX_SUBDIR_FILES, AX_SUBST_WITH,
-  AX_SYS_LARGEFILE_SENSITIVE, AX_WARNING_DEFAULT_ACLOCALDIR, and
-  AX_WARNING_DEFAULT_PKGCONFIG.
+  AX_PREFIG_CONFIG_H, AX_PROG_CC_CHAR_SUBSCRIPTS, AX_PROG_CP_S,
+  AX_SET_DEFAULT_PATHS_SYSTEM, AX_SPEC_FILE, AX_SPEC_PACKAGE_VERSION,
+  AX_SUBDIR_FILES, AX_SUBST_WITH, AX_SYS_LARGEFILE_SENSITIVE,
+  AX_WARNING_DEFAULT_ACLOCALDIR, and AX_WARNING_DEFAULT_PKGCONFIG.
 
   The macros AX_CXX_CPPFLAGS_STD_LANG, AX_CXX_CXXFLAGS_STD_LANG and
   AX_CXX_LDFLAGS_STD_LANG have been modified to use AX_COMPILER_VENDOR
