--- a/TODO
+++ b/TODO
@@ -103,451 +103,179 @@
   the "author" of git commit is not necessarily the actual author, but merely
   the maintainer who's, well, committing it. For the administrative files,
   however, this shouldn't be a problem.
-* TODO Generate HTML pages for obsolete macros and index pages [0/438]
+* TODO Generate HTML pages for obsolete macros and index pages [0/173]
+* TODO Update macros licensed under old GPL+AC-Exception terms to [[file:COPYING.EXCEPTION][version 3.0]] [0/173]
 
-  * [ ] _ac_c_ifdef.html
-  * [ ] _ac_latex_test.html
-  * [ ] _acltx_test.html
-  * [ ] ac_arg_with_path_style.html
-  * [ ] ac_as_dirname.html
-  * [ ] ac_as_mkdir_p.html
-  * [ ] ac_auto_include_headers.html
-  * [ ] ac_c_bigendian_cross.html
-  * [ ] ac_c_long_long.html
-  * [ ] ac_c_long_long_.html
-  * [ ] ac_c_printf_thsep.html
-  * [ ] ac_c_var_func.html
-  * [ ] ac_caolan_check_package.html
-  * [ ] ac_caolan_func_which_gethostbyname_r.html
-  * [ ] ac_caolan_search_package.html
-  * [ ] ac_check_cc_opt.html
-  * [ ] ac_check_class.html
-  * [ ] ac_check_classpath.html
-  * [ ] ac_check_curl.html
-  * [ ] ac_check_docbook_dtd.html
-  * [ ] ac_check_docbook_xslt.html
-  * [ ] ac_check_docbook_xslt_min.html
-  * [ ] ac_check_func_in.html
-  * [ ] ac_check_icu.html
-  * [ ] ac_check_java_home.html
-  * [ ] ac_check_junit.html
-  * [ ] ac_check_mysql_db.html
-  * [ ] ac_check_mysqlr.html
-  * [ ] ac_check_rqrd_class.html
-  * [ ] ac_check_struct_for.html
-  * [ ] ac_check_symbol.html
-  * [ ] ac_check_taglib.html
-  * [ ] ac_check_typedef.html
-  * [ ] ac_check_user.html
-  * [ ] ac_compile_check_sizeof.html
-  * [ ] ac_compile_warnings.html
-  * [ ] ac_cond_with.html
-  * [ ] ac_cond_with_level.html
-  * [ ] ac_config_libconfig_in.html
-  * [ ] ac_config_pkgconfig_in.html
-  * [ ] ac_create_generic_config.html
-  * [ ] ac_create_prefix_config_h.html
-  * [ ] ac_create_stdint_h.html
-  * [ ] ac_create_target_h.html
-  * [ ] ac_cxx_bool.html
-  * [ ] ac_cxx_compile_stdcxx_0x.html
-  * [ ] ac_cxx_compiler_vendor.html
-  * [ ] ac_cxx_complex_math_in_namespace_std.html
-  * [ ] ac_cxx_const_cast.html
-  * [ ] ac_cxx_cppflags_std_lang.html
-  * [ ] ac_cxx_cxxflags_std_lang.html
-  * [ ] ac_cxx_default_template_parameters.html
-  * [ ] ac_cxx_dtor_after_atexit.html
-  * [ ] ac_cxx_dynamic_cast.html
-  * [ ] ac_cxx_enum_computations.html
-  * [ ] ac_cxx_enum_computations_with_cast.html
-  * [ ] ac_cxx_exceptions.html
-  * [ ] ac_cxx_explicit.html
-  * [ ] ac_cxx_explicit_instantiations.html
-  * [ ] ac_cxx_explicit_template_function_qualification.html
-  * [ ] ac_cxx_extern_template.html
-  * [ ] ac_cxx_full_specialization_syntax.html
-  * [ ] ac_cxx_function_nontype_parameters.html
-  * [ ] ac_cxx_gnucxx_hashmap.html
-  * [ ] ac_cxx_have_complex.html
-  * [ ] ac_cxx_have_complex_math1.html
-  * [ ] ac_cxx_have_complex_math2.html
-  * [ ] ac_cxx_have_empty_iostream.html
-  * [ ] ac_cxx_have_ext_hash_map.html
-  * [ ] ac_cxx_have_ext_hash_set.html
-  * [ ] ac_cxx_have_ext_slist.html
-  * [ ] ac_cxx_have_freeze_sstream.html
-  * [ ] ac_cxx_have_ieee_math.html
-  * [ ] ac_cxx_have_long_long_for_iostream.html
-  * [ ] ac_cxx_have_numeric_limits.html
-  * [ ] ac_cxx_have_sstream.html
-  * [ ] ac_cxx_have_std.html
-  * [ ] ac_cxx_have_stl.html
-  * [ ] ac_cxx_have_string_push_back.html
-  * [ ] ac_cxx_have_system_v_math.html
-  * [ ] ac_cxx_have_valarray.html
-  * [ ] ac_cxx_have_vector_at.html
-  * [ ] ac_cxx_header_pre_stdcxx.html
-  * [ ] ac_cxx_header_stdcxx_0x.html
-  * [ ] ac_cxx_header_stdcxx_98.html
-  * [ ] ac_cxx_header_stdcxx_tr1.html
-  * [ ] ac_cxx_header_tr1_unordered_map.html
-  * [ ] ac_cxx_header_tr1_unordered_set.html
-  * [ ] ac_cxx_header_unordered_map.html
-  * [ ] ac_cxx_header_unordered_set.html
-  * [ ] ac_cxx_ldflags_std_lang.html
-  * [ ] ac_cxx_member_constants.html
-  * [ ] ac_cxx_member_templates.html
-  * [ ] ac_cxx_member_templates_outside_class.html
-  * [ ] ac_cxx_mutable.html
-  * [ ] ac_cxx_namespace_std.html
-  * [ ] ac_cxx_namespaces.html
-  * [ ] ac_cxx_nceg_restrict.html
-  * [ ] ac_cxx_new_for_scoping.html
-  * [ ] ac_cxx_old_for_scoping.html
-  * [ ] ac_cxx_partial_ordering.html
-  * [ ] ac_cxx_partial_specialization.html
-  * [ ] ac_cxx_reinterpret_cast.html
-  * [ ] ac_cxx_rtti.html
-  * [ ] ac_cxx_static_cast.html
-  * [ ] ac_cxx_stlport_hashmap.html
-  * [ ] ac_cxx_template_keyword_qualifier.html
-  * [ ] ac_cxx_template_objs.html
-  * [ ] ac_cxx_template_qualified_base_class.html
-  * [ ] ac_cxx_template_qualified_return_type.html
-  * [ ] ac_cxx_template_scoped_argument_matching.html
-  * [ ] ac_cxx_templates.html
-  * [ ] ac_cxx_templates_as_template_arguments.html
-  * [ ] ac_cxx_typename.html
-  * [ ] ac_cxx_use_numtrait.html
-  * [ ] ac_cxx_verbose_terminate_handler.html
-  * [ ] ac_define_dir.html
-  * [ ] ac_define_dir_.html
-  * [ ] ac_define_integer_bits.html
-  * [ ] ac_define_path_style.html
-  * [ ] ac_define_sub_path.html
-  * [ ] ac_define_versionlevel.html
-  * [ ] ac_echo_n.html
-  * [ ] ac_func_accept_argtypes.html
-  * [ ] ac_func_memmove.html
-  * [ ] ac_func_mkdir.html
-  * [ ] ac_func_snprintf.html
-  * [ ] ac_func_vsnprintf.html
-  * [ ] ac_java_options.html
-  * [ ] ac_jni_include_dir.html
-  * [ ] ac_latex_class.html
-  * [ ] ac_latex_class_article.html
-  * [ ] ac_latex_class_book.html
-  * [ ] ac_latex_class_report.html
-  * [ ] ac_latex_classes.html
-  * [ ] ac_latex_dvips_o_stdout.html
-  * [ ] ac_latex_dvips_t.html
-  * [ ] ac_latex_dvips_t_a4.html
-  * [ ] ac_latex_dvips_t_a4_landscape.html
-  * [ ] ac_latex_dvips_t_letter.html
-  * [ ] ac_latex_dvips_t_letter_landscape.html
-  * [ ] ac_latex_package.html
-  * [ ] ac_latex_package_amsmath.html
-  * [ ] ac_latex_package_fontenc.html
-  * [ ] ac_latex_package_input.html
-  * [ ] ac_latex_package_opt.html
-  * [ ] ac_latex_packages.html
-  * [ ] ac_lib_id3.html
-  * [ ] ac_lib_readline.html
-  * [ ] ac_lib_upnp.html
-  * [ ] ac_lib_wad.html
-  * [ ] ac_libtoolize_cflags.html
-  * [ ] ac_need_stdint_h.html
-  * [ ] ac_need_target_h.html
-  * [ ] ac_numeric_namedlevel.html
-  * [ ] ac_path_generic.html
-  * [ ] ac_path_lib.html
-  * [ ] ac_perl_module_version.html
-  * [ ] ac_pkg_mico.html
-  * [ ] ac_pkg_swig.html
-  * [ ] ac_prefix_config_h.html
-  * [ ] ac_prog_apache.html
-  * [ ] ac_prog_bibtex.html
-  * [ ] ac_prog_cc_char_subscripts.html
-  * [ ] ac_prog_cc_for_build.html
-  * [ ] ac_prog_cc_no_writeable_strings.html
-  * [ ] ac_prog_cc_strict_prototypes.html
-  * [ ] ac_prog_cc_warnings.html
-  * [ ] ac_prog_cp_s.html
-  * [ ] ac_prog_crontab.html
-  * [ ] ac_prog_dvipdf.html
-  * [ ] ac_prog_dvips.html
-  * [ ] ac_prog_fig2dev.html
-  * [ ] ac_prog_gnuplot.html
-  * [ ] ac_prog_gunzip.html
-  * [ ] ac_prog_gzip.html
-  * [ ] ac_prog_httpd.html
-  * [ ] ac_prog_jar.html
-  * [ ] ac_prog_java.html
-  * [ ] ac_prog_java_cc.html
-  * [ ] ac_prog_java_works.html
-  * [ ] ac_prog_javac.html
-  * [ ] ac_prog_javac_works.html
-  * [ ] ac_prog_javadoc.html
-  * [ ] ac_prog_javah.html
-  * [ ] ac_prog_jpeg2ps.html
-  * [ ] ac_prog_latex.html
-  * [ ] ac_prog_latex2html.html
-  * [ ] ac_prog_latex2man.html
-  * [ ] ac_prog_makeindex.html
-  * [ ] ac_prog_mf.html
-  * [ ] ac_prog_mktexpk.html
-  * [ ] ac_prog_modprobe.html
-  * [ ] ac_prog_mysql.html
-  * [ ] ac_prog_mysqladmin.html
-  * [ ] ac_prog_mysqld.html
-  * [ ] ac_prog_mysqlimport.html
-  * [ ] ac_prog_mysqlshow.html
-  * [ ] ac_prog_pdflatex.html
-  * [ ] ac_prog_perl_modules.html
-  * [ ] ac_prog_perl_version.html
-  * [ ] ac_prog_ps2pdf.html
-  * [ ] ac_prog_scp.html
-  * [ ] ac_prog_ssh.html
-  * [ ] ac_prog_xsltproc.html
-  * [ ] ac_prompt_user.html
-  * [ ] ac_prompt_user_no_define.html
-  * [ ] ac_prototype.html
-  * [ ] ac_prototype_accept.html
-  * [ ] ac_prototype_getsockname.html
-  * [ ] ac_prototype_setsockopt.html
-  * [ ] ac_python_devel.html
-  * [ ] ac_python_module.html
-  * [ ] ac_raf_func_which_getservbyname_r.html
-  * [ ] ac_set_default_paths_dllsystem.html
-  * [ ] ac_set_default_paths_system.html
-  * [ ] ac_set_releaseinfo_versioninfo.html
-  * [ ] ac_set_versionlevel.html
-  * [ ] ac_spec_package_3version.html
-  * [ ] ac_spec_package_version.html
-  * [ ] ac_subdir_files.html
-  * [ ] ac_subst_dir.html
-  * [ ] ac_subst_prefix_subpaths.html
-  * [ ] ac_sys_dev_poll.html
-  * [ ] ac_sys_largefile_sensitive.html
-  * [ ] ac_try_compile_java.html
-  * [ ] ac_try_run_javac.html
-  * [ ] ac_var_timezone_externals.html
-  * [ ] ac_very_nice.html
-  * [ ] acltx_class.html
-  * [ ] acltx_class_article.html
-  * [ ] acltx_class_book.html
-  * [ ] acltx_class_cweb.html
-  * [ ] acltx_class_report.html
-  * [ ] acltx_classes.html
-  * [ ] acltx_compress_eps.html
-  * [ ] acltx_converting_fig.html
-  * [ ] acltx_converting_jpg_eps.html
-  * [ ] acltx_converting_png_eps.html
-  * [ ] acltx_default_class.html
-  * [ ] acltx_dvips_o_stdout.html
-  * [ ] acltx_dvips_t.html
-  * [ ] acltx_dvips_t_a4.html
-  * [ ] acltx_dvips_t_a4_landscape.html
-  * [ ] acltx_dvips_t_letter.html
-  * [ ] acltx_dvips_t_letter_landscape.html
-  * [ ] acltx_package.html
-  * [ ] acltx_package_amsmath.html
-  * [ ] acltx_package_babel.html
-  * [ ] acltx_package_babel_language.html
-  * [ ] acltx_package_fontenc.html
-  * [ ] acltx_package_input.html
-  * [ ] acltx_package_listings.html
-  * [ ] acltx_package_listings_language.html
-  * [ ] acltx_package_location.html
-  * [ ] acltx_package_opt.html
-  * [ ] acltx_packages.html
-  * [ ] acltx_prog_bibtex.html
-  * [ ] acltx_prog_dvibook.html
-  * [ ] acltx_prog_dvipdf.html
-  * [ ] acltx_prog_dvips.html
-  * [ ] acltx_prog_fig2dev.html
-  * [ ] acltx_prog_gnuplot.html
-  * [ ] acltx_prog_gunzip.html
-  * [ ] acltx_prog_gzip.html
-  * [ ] acltx_prog_jpeg2ps.html
-  * [ ] acltx_prog_jpegtopnm.html
-  * [ ] acltx_prog_kpsewhich.html
-  * [ ] acltx_prog_latex.html
-  * [ ] acltx_prog_latex2html.html
-  * [ ] acltx_prog_latex2man.html
-  * [ ] acltx_prog_latex2png.html
-  * [ ] acltx_prog_latex2rtf.html
-  * [ ] acltx_prog_makeindex.html
-  * [ ] acltx_prog_mf.html
-  * [ ] acltx_prog_mktexpk.html
-  * [ ] acltx_prog_pdflatex.html
-  * [ ] acltx_prog_pngtopnm.html
-  * [ ] acltx_prog_pnmtops.html
-  * [ ] acltx_prog_ps2pdf.html
-  * [ ] acltx_prog_psbook.html
-  * [ ] acltx_prog_psnup.html
-  * [ ] acltx_prog_psresize.html
-  * [ ] acltx_prog_psselect.html
-  * [ ] acltx_prog_pstops.html
-  * [ ] acltx_prog_texhash.html
-  * [ ] acltx_texmf_path.html
-  * [ ] acx_blas.html
-  * [ ] acx_blas_f77_func.html
-  * [ ] acx_check_dos_filesys.html
-  * [ ] acx_check_pathname_style.html
-  * [ ] acx_f77_cmain_fflags.html
-  * [ ] acx_func_fork.html
-  * [ ] acx_lapack.html
-  * [ ] acx_mpi.html
-  * [ ] acx_pthread.html
-  * [ ] acx_restrict.html
-  * [ ] adl_compute_relative_paths.html
-  * [ ] adl_compute_standard_relative_paths.html
-  * [ ] adl_func_getopt_long.html
-  * [ ] adl_normalize_path.html
-  * [ ] ag_check_allocated_ctime.html
-  * [ ] ag_check_pathfind.html
-  * [ ] ag_check_posix_regcomp.html
-  * [ ] ag_check_posix_sysinfo.html
-  * [ ] ag_check_strcspn.html
-  * [ ] ag_check_strftime.html
-  * [ ] ag_check_sys_siglist.html
-  * [ ] ag_check_uname_syscall.html
-  * [ ] am_rpm_init.html
-  * [ ] am_with_mpatrol.html
-  * [ ] autoconf-archive.css
-  * [ ] ax_boost.html
-  * [ ] ax_cxx_helpful_terminate_handler.html
-  * [ ] ax_enable_builddir_uname.html
-  * [ ] ax_latex_class.html
-  * [ ] ax_latex_class_article.html
-  * [ ] ax_latex_class_book.html
-  * [ ] ax_latex_class_cweb.html
-  * [ ] ax_latex_class_report.html
-  * [ ] ax_latex_classes.html
-  * [ ] ax_latex_compress_eps.html
-  * [ ] ax_latex_converting_fig.html
-  * [ ] ax_latex_converting_jpg_eps.html
-  * [ ] ax_latex_converting_png_eps.html
-  * [ ] ax_latex_default_class.html
-  * [ ] ax_latex_dvips_o_stdout.html
-  * [ ] ax_latex_dvips_t.html
-  * [ ] ax_latex_dvips_t_a4.html
-  * [ ] ax_latex_dvips_t_a4_landscape.html
-  * [ ] ax_latex_dvips_t_letter.html
-  * [ ] ax_latex_dvips_t_letter_landscape.html
-  * [ ] ax_latex_package.html
-  * [ ] ax_latex_package_amsmath.html
-  * [ ] ax_latex_package_babel.html
-  * [ ] ax_latex_package_babel_language.html
-  * [ ] ax_latex_package_fontenc.html
-  * [ ] ax_latex_package_input.html
-  * [ ] ax_latex_package_listings.html
-  * [ ] ax_latex_package_listings_language.html
-  * [ ] ax_latex_package_location.html
-  * [ ] ax_latex_package_opt.html
-  * [ ] ax_latex_packages.html
-  * [ ] ax_latex_prog_bibtex.html
-  * [ ] ax_latex_prog_dvibook.html
-  * [ ] ax_latex_prog_dvipdf.html
-  * [ ] ax_latex_prog_dvips.html
-  * [ ] ax_latex_prog_fig2dev.html
-  * [ ] ax_latex_prog_gnuplot.html
-  * [ ] ax_latex_prog_gunzip.html
-  * [ ] ax_latex_prog_gzip.html
-  * [ ] ax_latex_prog_jpeg2ps.html
-  * [ ] ax_latex_prog_jpegtopnm.html
-  * [ ] ax_latex_prog_kpsewhich.html
-  * [ ] ax_latex_prog_latex.html
-  * [ ] ax_latex_prog_latex2html.html
-  * [ ] ax_latex_prog_latex2man.html
-  * [ ] ax_latex_prog_latex2png.html
-  * [ ] ax_latex_prog_latex2rtf.html
-  * [ ] ax_latex_prog_makeindex.html
-  * [ ] ax_latex_prog_mf.html
-  * [ ] ax_latex_prog_mktexpk.html
-  * [ ] ax_latex_prog_pdflatex.html
-  * [ ] ax_latex_prog_pngtopnm.html
-  * [ ] ax_latex_prog_pnmtops.html
-  * [ ] ax_latex_prog_ps2pdf.html
-  * [ ] ax_latex_prog_psbook.html
-  * [ ] ax_latex_prog_psnup.html
-  * [ ] ax_latex_prog_psresize.html
-  * [ ] ax_latex_prog_psselect.html
-  * [ ] ax_latex_prog_pstops.html
-  * [ ] ax_latex_prog_texhash.html
-  * [ ] ax_latex_test.html
-  * [ ] ax_latex_texmf_path.html
-  * [ ] ax_set_version_info.html
-  * [ ] az_python.html
-  * [ ] berkeley_db.html
-  * [ ] bnv_have_qt.html
-  * [ ] cf_ebcdic.html
-  * [ ] check_gnu_make.html
-  * [ ] check_ssl.html
-  * [ ] check_zlib.html
-  * [ ] compile_value.html
-  * [ ] ct_check_postgres_db.html
-  * [ ] dps_check_plugin.html
-  * [ ] dps_java_check_class.html
-  * [ ] dps_libgcj_jar.html
-  * [ ] dps_snprintf_oflow.html
-  * [ ] dps_xtra_classpath.html
-  * [ ] etr_short_sleep.html
-  * [ ] etr_socket_nsl.html
-  * [ ] etr_string_strcasecmp.html
-  * [ ] etr_strings_strcasecmp.html
-  * [ ] etr_struct_semun.html
-  * [ ] etr_sysv_ipc.html
-  * [ ] gl_trilinos_absolute_header.html
-  * [ ] immdx_lib_metis.html
-  * [ ] klm_sys_weak_alias.html
-  * [ ] lib_socket_nsl.html
-  * [ ] lua.html
-  * [ ] macros-by-author.html
-  * [ ] macros-by-category.html
-  * [ ] macros-by-license.html
-  * [ ] mdl_cxx_function_try_blocks.html
-  * [ ] mdl_have_opengl.html
-  * [ ] merk_prog_tcl.html
-  * [ ] merk_sip_devel.html
-  * [ ] mni_cxx_have_koenig_lookup.html
-  * [ ] mp_with_curses.html
-  * [ ] ms_check_pgsql_db.html
-  * [ ] ms_pgsql_priv_root.html
-  * [ ] ms_prog_pgclient.html
-  * [ ] normpath.html
-  * [ ] patch_libtool_changing_cmds_ifs.html
-  * [ ] patch_libtool_on_darwin_pass_all.html
-  * [ ] patch_libtool_on_darwin_zsh_overquoting.html
-  * [ ] patch_libtool_sys_lib_search_path_spec.html
-  * [ ] patch_libtool_to_add_host_cc.html
-  * [ ] peti_enable_dynamic_link.html
-  * [ ] peti_silent_mode.html
-  * [ ] peti_with_dmalloc.html
-  * [ ] qef_c_noreturn.html
-  * [ ] relpaths.html
-  * [ ] rlc_xercesc.html
-  * [ ] rssh_check_off64_t.html
-  * [ ] rssh_check_sunpro_c.html
-  * [ ] sg_afs.html
-  * [ ] smr_with_build_path.html
-  * [ ] stdrelpaths.html
-  * [ ] swig_enable_cxx.html
-  * [ ] swig_multi_module_support.html
-  * [ ] swig_python.html
-  * [ ] type_socklen_t.html
-  * [ ] vl_check_sign.html
-  * [ ] vl_decl_wchar_max.html
-  * [ ] vl_lib_readline.html
-  * [ ] vl_prog_cc_warnings.html
-  * [ ] vl_prog_fig2dev.html
-* TODO Make the contents NEWS file visible on the web
-
-  We could convert the NEWS file into texinfo and incorporate it into the
-  documentation.
-
-  Alternatively, the relevant bits for every release could be added to the news
-  tracker on Savannah as well. That wouldn't visualize the history on the main
-  Web site, though.
+  - [ ] [[file:m4/ax_arg_with_path_style.m4][ax_arg_with_path_style.m4]]
+  - [ ] [[file:m4/ax_blas_f77_func.m4][ax_blas_f77_func.m4]]
+  - [ ] [[file:m4/ax_blas.m4][ax_blas.m4]]
+  - [ ] [[file:m4/ax_boost_python.m4][ax_boost_python.m4]]
+  - [ ] [[file:m4/ax_c___attribute__.m4][ax_c___attribute__.m4]]
+  - [ ] [[file:m4/ax_c_bigendian_cross.m4][ax_c_bigendian_cross.m4]]
+  - [ ] [[file:m4/ax_cc_for_build.m4][ax_cc_for_build.m4]]
+  - [ ] [[file:m4/ax_c_check_flag.m4][ax_c_check_flag.m4]]
+  - [ ] [[file:m4/ax_cc_maxopt.m4][ax_cc_maxopt.m4]]
+  - [ ] [[file:m4/ax_c_compile_value.m4][ax_c_compile_value.m4]]
+  - [ ] [[file:m4/ax_c_declare_block.m4][ax_c_declare_block.m4]]
+  - [ ] [[file:m4/ax_cf_ebcdic.m4][ax_cf_ebcdic.m4]]
+  - [ ] [[file:m4/ax_cflags_aix_option.m4][ax_cflags_aix_option.m4]]
+  - [ ] [[file:m4/ax_cflags_force_c89.m4][ax_cflags_force_c89.m4]]
+  - [ ] [[file:m4/ax_cflags_gcc_option.m4][ax_cflags_gcc_option.m4]]
+  - [ ] [[file:m4/ax_cflags_hpux_option.m4][ax_cflags_hpux_option.m4]]
+  - [ ] [[file:m4/ax_cflags_irix_option.m4][ax_cflags_irix_option.m4]]
+  - [ ] [[file:m4/ax_cflags_no_writable_strings.m4][ax_cflags_no_writable_strings.m4]]
+  - [ ] [[file:m4/ax_cflags_strict_prototypes.m4][ax_cflags_strict_prototypes.m4]]
+  - [ ] [[file:m4/ax_cflags_sun_option.m4][ax_cflags_sun_option.m4]]
+  - [ ] [[file:m4/ax_cflags_warn_all_ansi.m4][ax_cflags_warn_all_ansi.m4]]
+  - [ ] [[file:m4/ax_cflags_warn_all.m4][ax_cflags_warn_all.m4]]
+  - [ ] [[file:m4/ax_check_aligned_access_required.m4][ax_check_aligned_access_required.m4]]
+  - [ ] [[file:m4/ax_check_class.m4][ax_check_class.m4]]
+  - [ ] [[file:m4/ax_check_classpath.m4][ax_check_classpath.m4]]
+  - [ ] [[file:m4/ax_check_compiler_flags.m4][ax_check_compiler_flags.m4]]
+  - [ ] [[file:m4/ax_check_define.m4][ax_check_define.m4]]
+  - [ ] [[file:m4/ax_check_docbook_dtd.m4][ax_check_docbook_dtd.m4]]
+  - [ ] [[file:m4/ax_check_docbook_xslt.m4][ax_check_docbook_xslt.m4]]
+  - [ ] [[file:m4/ax_check_docbook_xslt_min.m4][ax_check_docbook_xslt_min.m4]]
+  - [ ] [[file:m4/ax_check_dos_filesys.m4][ax_check_dos_filesys.m4]]
+  - [ ] [[file:m4/ax_check_func_in.m4][ax_check_func_in.m4]]
+  - [ ] [[file:m4/ax_check_gl.m4][ax_check_gl.m4]]
+  - [ ] [[file:m4/ax_check_glu.m4][ax_check_glu.m4]]
+  - [ ] [[file:m4/ax_check_glut.m4][ax_check_glut.m4]]
+  - [ ] [[file:m4/ax_check_java_home.m4][ax_check_java_home.m4]]
+  - [ ] [[file:m4/ax_check_java_plugin.m4][ax_check_java_plugin.m4]]
+  - [ ] [[file:m4/ax_check_library.m4][ax_check_library.m4]]
+  - [ ] [[file:m4/ax_check_linker_flags.m4][ax_check_linker_flags.m4]]
+  - [ ] [[file:m4/ax_check_mysql_db.m4][ax_check_mysql_db.m4]]
+  - [ ] [[file:m4/ax_check_pathname_style.m4][ax_check_pathname_style.m4]]
+  - [ ] [[file:m4/ax_check_pgsql_db.m4][ax_check_pgsql_db.m4]]
+  - [ ] [[file:m4/ax_check_rqrd_class.m4][ax_check_rqrd_class.m4]]
+  - [ ] [[file:m4/ax_check_symbol.m4][ax_check_symbol.m4]]
+  - [ ] [[file:m4/ax_check_typedef.m4][ax_check_typedef.m4]]
+  - [ ] [[file:m4/ax_check_user.m4][ax_check_user.m4]]
+  - [ ] [[file:m4/ax_check_zlib.m4][ax_check_zlib.m4]]
+  - [ ] [[file:m4/ax_compile_check_sizeof.m4][ax_compile_check_sizeof.m4]]
+  - [ ] [[file:m4/ax_compiler_vendor.m4][ax_compiler_vendor.m4]]
+  - [ ] [[file:m4/ax_compute_relative_paths.m4][ax_compute_relative_paths.m4]]
+  - [ ] [[file:m4/ax_compute_standard_relative_paths.m4][ax_compute_standard_relative_paths.m4]]
+  - [ ] [[file:m4/ax_cond_with_level.m4][ax_cond_with_level.m4]]
+  - [ ] [[file:m4/ax_config_feature.m4][ax_config_feature.m4]]
+  - [ ] [[file:m4/ax_configure_args.m4][ax_configure_args.m4]]
+  - [ ] [[file:m4/ax_cpp_check_flag.m4][ax_cpp_check_flag.m4]]
+  - [ ] [[file:m4/ax_create_generic_config.m4][ax_create_generic_config.m4]]
+  - [ ] [[file:m4/ax_create_pkgconfig_info.m4][ax_create_pkgconfig_info.m4]]
+  - [ ] [[file:m4/ax_create_stdint_h.m4][ax_create_stdint_h.m4]]
+  - [ ] [[file:m4/ax_create_target_h.m4][ax_create_target_h.m4]]
+  - [ ] [[file:m4/ax_c_var_func.m4][ax_c_var_func.m4]]
+  - [ ] [[file:m4/ax_cxx_check_flag.m4][ax_cxx_check_flag.m4]]
+  - [ ] [[file:m4/ax_cxxcpp_check_flag.m4][ax_cxxcpp_check_flag.m4]]
+  - [ ] [[file:m4/ax_cxx_function_try_blocks.m4][ax_cxx_function_try_blocks.m4]]
+  - [ ] [[file:m4/ax_cxx_have_empty_iostream.m4][ax_cxx_have_empty_iostream.m4]]
+  - [ ] [[file:m4/ax_cxx_have_ext_hash_map.m4][ax_cxx_have_ext_hash_map.m4]]
+  - [ ] [[file:m4/ax_cxx_have_ext_hash_set.m4][ax_cxx_have_ext_hash_set.m4]]
+  - [ ] [[file:m4/ax_cxx_have_ext_slist.m4][ax_cxx_have_ext_slist.m4]]
+  - [ ] [[file:m4/ax_cxx_have_freeze_sstream.m4][ax_cxx_have_freeze_sstream.m4]]
+  - [ ] [[file:m4/ax_cxx_have_long_long_for_iostream.m4][ax_cxx_have_long_long_for_iostream.m4]]
+  - [ ] [[file:m4/ax_define_sub_path.m4][ax_define_sub_path.m4]]
+  - [ ] [[file:m4/ax_dirname.m4][ax_dirname.m4]]
+  - [ ] [[file:m4/ax_enable_builddir.m4][ax_enable_builddir.m4]]
+  - [ ] [[file:m4/ax_expand_prefix.m4][ax_expand_prefix.m4]]
+  - [ ] [[file:m4/ax_f77_cmain_fflags.m4][ax_f77_cmain_fflags.m4]]
+  - [ ] [[file:m4/ax_func_accept_argtypes.m4][ax_func_accept_argtypes.m4]]
+  - [ ] [[file:m4/ax_func_fork.m4][ax_func_fork.m4]]
+  - [ ] [[file:m4/ax_func_getopt_long.m4][ax_func_getopt_long.m4]]
+  - [ ] [[file:m4/ax_func_mkdir.m4][ax_func_mkdir.m4]]
+  - [ ] [[file:m4/ax_func_which_gethostbyname_r.m4][ax_func_which_gethostbyname_r.m4]]
+  - [ ] [[file:m4/ax_func_which_getservbyname_r.m4][ax_func_which_getservbyname_r.m4]]
+  - [ ] [[file:m4/ax_gcc_archflag.m4][ax_gcc_archflag.m4]]
+  - [ ] [[file:m4/ax_gcc_const_call.m4][ax_gcc_const_call.m4]]
+  - [ ] [[file:m4/ax_gcc_install_dir.m4][ax_gcc_install_dir.m4]]
+  - [ ] [[file:m4/ax_gcc_libgcc_eh.m4][ax_gcc_libgcc_eh.m4]]
+  - [ ] [[file:m4/ax_gcc_lib.m4][ax_gcc_lib.m4]]
+  - [ ] [[file:m4/ax_gcc_libraries_dir.m4][ax_gcc_libraries_dir.m4]]
+  - [ ] [[file:m4/ax_gcc_libsupcxx.m4][ax_gcc_libsupcxx.m4]]
+  - [ ] [[file:m4/ax_gcc_malloc_call.m4][ax_gcc_malloc_call.m4]]
+  - [ ] [[file:m4/ax_gcc_option.m4][ax_gcc_option.m4]]
+  - [ ] [[file:m4/ax_gcc_version.m4][ax_gcc_version.m4]]
+  - [ ] [[file:m4/ax_gcc_warn_unused_result.m4][ax_gcc_warn_unused_result.m4]]
+  - [ ] [[file:m4/ax_gcc_x86_cpuid.m4][ax_gcc_x86_cpuid.m4]]
+  - [ ] [[file:m4/ax_gxx_version.m4][ax_gxx_version.m4]]
+  - [ ] [[file:m4/ax_have_opengl.m4][ax_have_opengl.m4]]
+  - [ ] [[file:m4/ax_java_check_class.m4][ax_java_check_class.m4]]
+  - [ ] [[file:m4/ax_lapack.m4][ax_lapack.m4]]
+  - [ ] [[file:m4/ax_ld_check_flag.m4][ax_ld_check_flag.m4]]
+  - [ ] [[file:m4/ax_libgcj_jar.m4][ax_libgcj_jar.m4]]
+  - [ ] [[file:m4/ax_lib_wad.m4][ax_lib_wad.m4]]
+  - [ ] [[file:m4/ax_lua.m4][ax_lua.m4]]
+  - [ ] [[file:m4/ax_maintainer_mode_auto_silent.m4][ax_maintainer_mode_auto_silent.m4]]
+  - [ ] [[file:m4/ax_missing_prog.m4][ax_missing_prog.m4]]
+  - [ ] [[file:m4/ax_mpi.m4][ax_mpi.m4]]
+  - [ ] [[file:m4/ax_mpip.m4][ax_mpip.m4]]
+  - [ ] [[file:m4/ax_normalize_path.m4][ax_normalize_path.m4]]
+  - [ ] [[file:m4/ax_not_enable_frame_pointer.m4][ax_not_enable_frame_pointer.m4]]
+  - [ ] [[file:m4/ax_numeric_namedlevel.m4][ax_numeric_namedlevel.m4]]
+  - [ ] [[file:m4/ax_openmp.m4][ax_openmp.m4]]
+  - [ ] [[file:m4/ax_patch_libtool_changing_cmds_ifs.m4][ax_patch_libtool_changing_cmds_ifs.m4]]
+  - [ ] [[file:m4/ax_path_lib_pcre.m4][ax_path_lib_pcre.m4]]
+  - [ ] [[file:m4/ax_pgsql_priv_root.m4][ax_pgsql_priv_root.m4]]
+  - [ ] [[file:m4/ax_pkg_swig.m4][ax_pkg_swig.m4]]
+  - [ ] [[file:m4/ax_prefix_config_h.m4][ax_prefix_config_h.m4]]
+  - [ ] [[file:m4/ax_prog_apache.m4][ax_prog_apache.m4]]
+  - [ ] [[file:m4/ax_prog_bison.m4][ax_prog_bison.m4]]
+  - [ ] [[file:m4/ax_prog_cc_char_subscripts.m4][ax_prog_cc_char_subscripts.m4]]
+  - [ ] [[file:m4/ax_prog_cp_s.m4][ax_prog_cp_s.m4]]
+  - [ ] [[file:m4/ax_prog_crontab.m4][ax_prog_crontab.m4]]
+  - [ ] [[file:m4/ax_prog_fasm.m4][ax_prog_fasm.m4]]
+  - [ ] [[file:m4/ax_prog_fasm_opt.m4][ax_prog_fasm_opt.m4]]
+  - [ ] [[file:m4/ax_prog_flex.m4][ax_prog_flex.m4]]
+  - [ ] [[file:m4/ax_prog_hla.m4][ax_prog_hla.m4]]
+  - [ ] [[file:m4/ax_prog_hla_opt.m4][ax_prog_hla_opt.m4]]
+  - [ ] [[file:m4/ax_prog_httpd.m4][ax_prog_httpd.m4]]
+  - [ ] [[file:m4/ax_prog_java_cc.m4][ax_prog_java_cc.m4]]
+  - [ ] [[file:m4/ax_prog_javac.m4][ax_prog_javac.m4]]
+  - [ ] [[file:m4/ax_prog_javac_works.m4][ax_prog_javac_works.m4]]
+  - [ ] [[file:m4/ax_prog_java.m4][ax_prog_java.m4]]
+  - [ ] [[file:m4/ax_prog_java_works.m4][ax_prog_java_works.m4]]
+  - [ ] [[file:m4/ax_prog_masm.m4][ax_prog_masm.m4]]
+  - [ ] [[file:m4/ax_prog_masm_opt.m4][ax_prog_masm_opt.m4]]
+  - [ ] [[file:m4/ax_prog_mysqladmin.m4][ax_prog_mysqladmin.m4]]
+  - [ ] [[file:m4/ax_prog_mysqld.m4][ax_prog_mysqld.m4]]
+  - [ ] [[file:m4/ax_prog_mysqlimport.m4][ax_prog_mysqlimport.m4]]
+  - [ ] [[file:m4/ax_prog_mysql.m4][ax_prog_mysql.m4]]
+  - [ ] [[file:m4/ax_prog_mysqlshow.m4][ax_prog_mysqlshow.m4]]
+  - [ ] [[file:m4/ax_prog_nasm.m4][ax_prog_nasm.m4]]
+  - [ ] [[file:m4/ax_prog_nasm_opt.m4][ax_prog_nasm_opt.m4]]
+  - [ ] [[file:m4/ax_prog_pgclient.m4][ax_prog_pgclient.m4]]
+  - [ ] [[file:m4/ax_prog_scp.m4][ax_prog_scp.m4]]
+  - [ ] [[file:m4/ax_prog_ssh.m4][ax_prog_ssh.m4]]
+  - [ ] [[file:m4/ax_prog_tasm.m4][ax_prog_tasm.m4]]
+  - [ ] [[file:m4/ax_prog_tasm_opt.m4][ax_prog_tasm_opt.m4]]
+  - [ ] [[file:m4/ax_prog_tcl.m4][ax_prog_tcl.m4]]
+  - [ ] [[file:m4/ax_prog_xsltproc.m4][ax_prog_xsltproc.m4]]
+  - [ ] [[file:m4/ax_prog_yasm.m4][ax_prog_yasm.m4]]
+  - [ ] [[file:m4/ax_prog_yasm_opt.m4][ax_prog_yasm_opt.m4]]
+  - [ ] [[file:m4/ax_prototype_accept.m4][ax_prototype_accept.m4]]
+  - [ ] [[file:m4/ax_prototype_getsockname.m4][ax_prototype_getsockname.m4]]
+  - [ ] [[file:m4/ax_prototype.m4][ax_prototype.m4]]
+  - [ ] [[file:m4/ax_prototype_setsockopt.m4][ax_prototype_setsockopt.m4]]
+  - [ ] [[file:m4/ax_pthread.m4][ax_pthread.m4]]
+  - [ ] [[file:m4/ax_python_devel.m4][ax_python_devel.m4]]
+  - [ ] [[file:m4/ax_python.m4][ax_python.m4]]
+  - [ ] [[file:m4/ax_ruby_devel.m4][ax_ruby_devel.m4]]
+  - [ ] [[file:m4/ax_set_default_paths_system.m4][ax_set_default_paths_system.m4]]
+  - [ ] [[file:m4/ax_spec_file.m4][ax_spec_file.m4]]
+  - [ ] [[file:m4/ax_spec_package_version.m4][ax_spec_package_version.m4]]
+  - [ ] [[file:m4/ax_subdir_files.m4][ax_subdir_files.m4]]
+  - [ ] [[file:m4/ax_subst_with.m4][ax_subst_with.m4]]
+  - [ ] [[file:m4/ax_swig_enable_cxx.m4][ax_swig_enable_cxx.m4]]
+  - [ ] [[file:m4/ax_swig_multi_module_support.m4][ax_swig_multi_module_support.m4]]
+  - [ ] [[file:m4/ax_swig_python.m4][ax_swig_python.m4]]
+  - [ ] [[file:m4/ax_sys_largefile_sensitive.m4][ax_sys_largefile_sensitive.m4]]
+  - [ ] [[file:m4/ax_tls.m4][ax_tls.m4]]
+  - [ ] [[file:m4/ax_type_socklen_t.m4][ax_type_socklen_t.m4]]
+  - [ ] [[file:m4/ax_var_timezone_externals.m4][ax_var_timezone_externals.m4]]
+  - [ ] [[file:m4/ax_very_nice.m4][ax_very_nice.m4]]
+  - [ ] [[file:m4/ax_warning_default_aclocaldir.m4][ax_warning_default_aclocaldir.m4]]
+  - [ ] [[file:m4/ax_warning_default_pkgconfig.m4][ax_warning_default_pkgconfig.m4]]
+  - [ ] [[file:m4/ax_with_curses.m4][ax_with_curses.m4]]
+  - [ ] [[file:m4/ax_xercesc.m4][ax_xercesc.m4]]
+  - [ ] [[file:m4/ax_xtra_classpath.m4][ax_xtra_classpath.m4]]
