AX_PROG_FLEX, AX_PROG_BISON: use version information for detection
Rather than reimplementing (partial) basename functionality, follow the
suggestion by the Autoconf manual to check for the output of --version for
the program's name.

Also, make the macro use m4_ifnblank rather than use an unconditional :
no-op operation.

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,9 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  The robustness of AX_PROG_FLEX and AX_PROG_BISON has been improved. See
+  <http://savannah.gnu.org/patch/?7405> for further details.
+
   A bug in AX_EXT_HAVE_LIB has been fixed that prevented the macro from being
   called several times. See <http://savannah.gnu.org/patch/?7403> for further
   details.
