AX_PKG_SWIG: fix the configure check so it can find swig 2 as swig2.0
Ubuntu Maverick and Ubuntu Natty install swig 2 as /usr/bin/swig2.0
because they do not yet want to upgrade their normal swig package. This
lets our macro find that too.

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,9 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  AX_PKG_SWIG has been extended to find SWIG v2 as installed by Ubuntu Maverick
+  and Ubuntu Natty.
+
   AX_PROG_SPLINT has been added. The macro provides Automake support for the
   splint utility. See <http://savannah.gnu.org/patch/?7453> for further
   details.
