--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,11 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  AX_LIB_EXPAT has been modified to save the found library in EXPAT_LIBS
+  instead if EXPAT_LDFLAGS. This is necessary to avoid build failures when
+  linking with --as-needed. See <http://savannah.gnu.org/patch/?7489> for
+  further details.
+
   AX_PKG_SWIG has been extended to find SWIG v2 as installed by Ubuntu Maverick
   and Ubuntu Natty.
 
