post-release administrivia
* NEWS: Add header line for next release.
* .prev-version: Record previous version.
* cfg.mk (old_NEWS_hash): Auto-update.

--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,8 @@
 # and this notice are preserved. This file is offered as-is, without any
 # warranty.
 
+* Noteworthy changes in release ?.? (????-??-??) [?]
+
 * Noteworthy changes in release 2011.03.17 (2011-03-17) [stable]
 
   AX_PATH_GENERIC has been extended to allow setting LIBRARY_LIBS and
