AX_BOOST_THREAD: fixes two bugs that prevented cross-compilation for Windows on Unix
 - In the OS selection switches, where the special cases for mingw are
   selected, it says ming32 but should be mingw32.

 - Those switches are supposed to be dependent on the os you compile for but
   the switch uses the build_os variable.

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,9 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  AX_BOOST_THREAD: Two bugs have been fixed that prevented the macro from being
+  used in cross-compilation environments for Windows on Unix.
+
   AX_VAR_TIMEZONE_EXTERNALS, AX_FUNC_WHICH_GETHOSTBYNAME_R, and AX_PTHREAD have
   been updated to conform with Autoconf 2.68
 
