AX_CHECK_DEFINE: various bug fixes
 - Change macro names to CHECK_DEFINE and alias the old name CHECK_DEFINED.
   This makes the names in sync with the help comments on top.

 - Update obsolete AC_TRY_COMPILE to AC_COMPILE_IFELSE.

 - Include header name in cache value and in output message.

 - Switch #ifndef to #ifdef. That macro could not have worked previously.

See <http://savannah.gnu.org/patch/?7551> for further details.

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,9 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  Several several bugs in AX_CHECK_DEFINE have been fixed. See
+  <http://savannah.gnu.org/patch/?7551> for further details.
+
   The new macros AX_PROG_CC_MPI, AX_PROG_CXX_MPI, AX_PROG_F77_MPI, and
   AX_PROG_FC_MPI address several shortcomings found in AX_MPI. Further details
   can be found at
