AX_CHECK_MYSQL: new submission
I am submitting an Autoconf Macro I've been developing for the past
couple months - ax_check_mysql.m4. I'm aware that multiple other MySQL
macros exist, but mine is specifically geared toward MySQL plugin
development and installation. Specifically:

 - Automatically Detects binary, include, and plugin directories for most
   typical MySQL installations.

 - Provides methods for one to designate the directories manually, or point to
   a root directory containing a MySQL installation.

See <http://savannah.gnu.org/patch/?7553> for further details.

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,10 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  The new macro AX_CHECK_MYSQL has been added. It is geared specifically toward
+  MySQL plugin development. See <http://savannah.gnu.org/patch/?7553> for
+  further details.
+
   AX_PTHREAD has been extended to check for PTHREAD_PRIO_INHERIT. See
   <http://savannah.gnu.org/patch/?7552> for further details.
 
