--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,14 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  The new macro AX_CHECK_FLAG has been added, which is intended to obsolete
+  AX_C_CHECK_FLAG, AX_CFLAGS_AIX_OPTION, AX_CFLAGS_GCC_OPTION,
+  AX_CFLAGS_HPUX_OPTION, AX_CFLAGS_IRIX_OPTION, AX_CFLAGS_SUN_OPTION,
+  AX_CHECK_COMPILER_FLAGS, AX_CHECK_LINKER_FLAGS, AX_CPP_CHECK_FLAG,
+  AX_CXX_CHECK_FLAG, AX_CXXCPP_CHECK_FLAG, and AX_LD_CHECK_FLAG. Further
+  details can be found at
+  <http://lists.gnu.org/archive/html/autoconf-archive-maintainers/2011-06/msg00017.html>.
+
   The obsolete macros AX_CFLAGS_WARN_ALL_ANSI, AX_C_IFDEF, AX_C_PRINTF_THSEP,
   AX_GCC_OPTION, AX_WITH_GUILE, AX_WITH_PERL, AX_WITH_PYTHON, and AX_WITH_RUBY
   have been deleted.
