--- a/NEWS
+++ b/NEWS
@@ -10,16 +10,13 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
-  Marked the following macros as obsolete: AX_C_CHECK_FLAG,
-  AX_CHECK_COMPILER_FLAGS, AX_CHECK_LINKER_FLAGS, AX_CPP_CHECK_FLAG,
-  AX_CXX_CHECK_FLAG, AX_CXXCPP_CHECK_FLAG, AX_CFLAGS_GCC_OPTION, and
-  AX_LD_CHECK_FLAG. These macros will eventually be removed from the archive.
-
-  The new macro AX_CHECK_FLAG has been added, which replaces AX_C_CHECK_FLAG,
-  AX_CFLAGS_AIX_OPTION, AX_CFLAGS_GCC_OPTION, AX_CFLAGS_HPUX_OPTION,
-  AX_CFLAGS_IRIX_OPTION, AX_CFLAGS_SUN_OPTION, AX_CHECK_COMPILER_FLAGS,
-  AX_CHECK_LINKER_FLAGS, AX_CPP_CHECK_FLAG, AX_CXX_CHECK_FLAG,
-  AX_CXXCPP_CHECK_FLAG, and AX_LD_CHECK_FLAG. Further details can be found at
+  The new macros AX_CHECK_PREPROC_FLAG, AX_CHECK_COMPILE_FLAG, and
+  AX_CHECK_LINK_FLAG have been added. They are intended to replace
+  AX_C_CHECK_FLAG, AX_CHECK_COMPILER_FLAGS, AX_CHECK_LINKER_FLAGS,
+  AX_CPP_CHECK_FLAG, AX_CXX_CHECK_FLAG, AX_CXXCPP_CHECK_FLAG,
+  AX_CFLAGS_GCC_OPTION, and AX_LD_CHECK_FLAG. Consequently, the older macros
+  have been marked obsolete, and they'll be removed from the archive in the
+  foreseeable future. Further details can be found at
   <http://lists.gnu.org/archive/html/autoconf-archive-maintainers/2011-06/msg00017.html>.
 
   The obsolete macros AX_CFLAGS_WARN_ALL_ANSI, AX_C_IFDEF, AX_C_PRINTF_THSEP,
