ax_check_openssl: Fix underquoted macro arguments.
Several of the macros used in AX_CHECK_OPENSSL have underquoted
arguments.  In particular, autoconf complains loudly about the
unquoted AC_LANG_PROGRAM argument to AC_LINK_IFELSE:

  configure.ac:10: warning: AC_LANG_CONFTEST: no AC_LANG_SOURCE call detected in body
  ../../lib/autoconf/lang.m4:194: AC_LANG_CONFTEST is expanded from...
  ../../lib/autoconf/general.m4:2662: _AC_LINK_IFELSE is expanded from...
  ../../lib/autoconf/general.m4:2679: AC_LINK_IFELSE is expanded from...
  m4/ax_check_openssl.m4:38: AX_CHECK_OPENSSL is expanded from...
  configure.ac:10: the top level

Fix that up, and fix up the others while we're at it.

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,10 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  Several instance of under-quoted arguments have been fixed in
+  AX_CHECK_OPENSSL. See <http://savannah.gnu.org/patch/?7571> for further
+  details.
+
   The new macros AX_CHECK_PREPROC_FLAG, AX_CHECK_COMPILE_FLAG, and
   AX_CHECK_LINK_FLAG have been added. They are intended to replace
   AX_C_CHECK_FLAG, AX_CHECK_COMPILER_FLAGS, AX_CHECK_LINKER_FLAGS,
