--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,10 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  AX_WITH_CURSES has been extensively re-written, and the new variants
+  AX_WITH_CURSES_PANEL, AX_WITH_CURSES_MENU, and AX_WITH_CURSES_FORM have been
+  added. See <http://savannah.gnu.org/patch/?7587> for further details.
+
 * Noteworthy changes in release 2011.07.17 (2011-07-17) [stable]
 
   A cut-and-paste error in AX_BOOST_FILESSYTEM has been fixed. See
