AX_LIB_HDF5: HAVE_HDF5 was defined even when the library is not detected
The following codes are executed unless --without-hdf5 is used, even
when the HDF5 library is not installed or detected:

  AC_SUBST([HDF5_VERSION])
  AC_SUBST([HDF5_CFLAGS])
  AC_SUBST([HDF5_CPPFLAGS])
  AC_SUBST([HDF5_LDFLAGS])
  AC_SUBST([HDF5_FFLAGS])
  AC_SUBST([HDF5_FLIBS])
  AC_DEFINE([HAVE_HDF5], [1], [Defined if you have HDF5 support])

To remedy the situation, these have been moved into the conditional
block where HDF5 is actually detected.

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,9 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  AX_LIB_HDF5 erroneously defined HAVE_HDF5 even when the library was not
+  detected. This has been fixed.
+
   Autoconf 2.68 warnings concerning AX_PTHREAD haven been fixed.
 
   AX_WITH_CURSES has been extensively re-written, and the new variants
