NEWS: document recent changes

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,9 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  AX_FUNC_FORK and AX_SNPRINTF_OFLOW have been marked obsolete, because there
+  are superior alternatives.
+
   Modified AX_LIB_SQLITE3 to find the library using the C instead of the C++
   compiler. See <http://savannah.gnu.org/patch/?7601> for further details.
 
