AX_COUNT_CPUS: fixed endless recursion bug
See <http://savannah.gnu.org/patch/?7697> for further details.

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,9 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  An endless recursion-bug in AX_COUNT_CPUS has been fixed. See
+  <http://savannah.gnu.org/patch/?7697> for further details.
+
 * Noteworthy changes in release 2011.12.21 (2011-12-21) [stable]
 
   Error reporting in AX_BERKELEY_DB_CXX has been improved in the case the macro
