--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,9 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  The macro AX_BOOST_CHRONO has been added which detects the Boost.Chrono
+  library. See <http://savannah.gnu.org/patch/?7721> for further details.
+
   Support for automatic detection of dynamic libraries on Mac OS X (*.dylib)
   has been improved in all Boost macros. <http://savannah.gnu.org/patch/?7719>
   has further details.
