AX_BLAS: added the libraries "-lguide -lpthread" for the Intel MKL library test
These two libraries are needed to avoid unresolved symbols. 

See <http://savannah.gnu.org/patch/?7770> for further details.

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,9 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  A bug has been fixed in the Intel MKL library test of AX_BLAS. See
+  <http://savannah.gnu.org/patch/?7770> for further details.
+
   AX_BOOST_SERIALIZATION has been improved to support for MacOS/BSD sed.
   Further details can be found at <http://savannah.gnu.org/patch/?7768>.
 
